--- a/CryptoBlog/views/home.ejs
+++ b/CryptoBlog/views/home.ejs
@@ -8,7 +8,11 @@
     </div>
 
     <container class="container">
-        <cards class="cards">   
+        <div class="crypto-label">
+            <h3 style="margin: 0;">Check what's popular</h3>   
+        </div>
+        <cards class="cards">
+ 
             
         </cards>
     </container>
