--- a/CryptoBlog/views/posts.ejs
+++ b/CryptoBlog/views/posts.ejs
@@ -9,63 +9,33 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/styles/posts.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Post</title>
 </head>
 
 <body>
     <%- include('../partials/navbar.ejs') %>
 
+    <div class="all-content">
+        <%- include('../partials/sidebar.ejs') %>
+
+
+
 
         <main class="main-container">
-
-
-
             <div class="contents-container">
-
-
-
                 <div class="container">
-                                
-                    
                     <div class="post-container">
 
                         <% if(posts.length === 0) { %>
                             <h1 style="margin-top: 20% ;">There are currently no posts. Start the trend!</h1>
-                        <% } %>
-                        
-
-                        <% if(id) { %>
-
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" id="modal-button" data-toggle="modal" data-target="#exampleModalCenter">
-                            Make a Comment
-                        </button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Leave a Comment</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                </div>
-                                <form class="post-form" action='/newpost/<%= coinName %>' method="POST">
-                                <div class="modal-body" style="width: 100%;">
-                                        <input type="text-field" name="description" id="description" placeholder="Leave a comment! " rows="10">
-                                </div>
-                                <div class="modal-footer" style="width: 100%;">
-                                    <button type="sumbit" class="btn btn-dark" id="create-post">
-                                        <a >Create a post</a>
-                                    </button>
-                                </div>
-                            </form>
-
-                            </div>
-                            </div>
-                        </div>
+                        <% } else { %>
+                            <h1>Comments: </h1>
                         <% } %>
 
+                       
                         <% for(var i=0; i < posts.length; i++) { %>
                             <div class="post">
                                 <div class="user-info">
@@ -79,14 +49,18 @@
                                     <p class="description">
                                         <%= posts[i].description %>
                                     </p>
-                                    <% if(username===posts[i].name) { %>
                                         <div class="buttons">
-                                            <form class="logout-form" action='/delete/<%= posts[i].id %>' method="POST">
-                                                <button class='delete-button' type='submit'>Delete</button>
-                                            </form>
-                                            <button type="button" class="reply-button" data-toggle="modal" data-target="#<%= posts[i].id %>">
-                                                Reply
-                                            </button>
+                                            <% if(username===posts[i].name) { %>
+                                                <form class="logout-form" action='/delete/<%= posts[i].id %>' method="POST">
+                                                    <button class='delete-button' type='submit'>Delete</button>
+                                                </form>
+                                            <% } %>
+
+                                            <% if(id) { %>
+                                                <button type="button" class="reply-button" data-toggle="modal" data-target="#<%= posts[i].id %>">
+                                                    Reply
+                                                </button>
+                                            <% } %>
                                             <div class="modal fade" id="<%= posts[i].id %>" tabindex="-1" role="dialog" aria-labelledby="reply" aria-hidden="true">
                                                 <div class="modal-dialog modal-dialog-centered" role="document">
                                                 <div class="modal-content">
@@ -111,7 +85,6 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    <% } %>
                                 </div>
                                 <% for(var j = 0; j < replies.length; j++){ %>
                                     
@@ -119,7 +92,7 @@
 
                                     <div class="user-info">
                                         <h6 style="padding-left: 5%;">
-                                            <%= posts[i].name %>
+                                            <%= replies[j].name %>
                                         </h6>
     
                                     </div>
@@ -128,11 +101,12 @@
                                         <p class="description">
                                             <%= replies[j].description %>
                                         </p>
-                                        <% if(username===replies[j].name) { %>
                                             <div class="buttons">
-                                                <form class="logout-form" action='/delete/reply/<%= replies[j].id %>' method="POST">
-                                                    <button class='delete-button' type='submit'>Delete</button>
-                                                </form>
+                                                <% if(username===replies[j].name) { %>
+                                                    <form class="logout-form" action='/delete/reply/<%= replies[j].id %>' method="POST">
+                                                        <button class='delete-button' type='submit'>Delete</button>
+                                                    </form>
+                                                <% } %>
                                                 <div class="modal fade" id="<%= replies[i].id %>" tabindex="-1" role="dialog" aria-labelledby="reply" aria-hidden="true">
                                                     <div class="modal-dialog modal-dialog-centered" role="document">
                                                     <div class="modal-content">
@@ -157,21 +131,48 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        <% } %>
                                     </div>
                                     <% } %>
                                 <% } %>
                             </div>
                         <% } %>
-
-
-
                     </div>
 
-                    <cards class="cards">
+                    <div class="right-container">
+                        <cards class="cards">
 
-                    </cards>
-
+                        </cards>
+                        <% if(id) { %>
+    
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" id="modal-button" data-toggle="modal" data-target="#exampleModalCenter">
+                                Make a Comment
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Leave a Comment</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form class="post-form" action='/newpost/<%= coinName %>' method="POST">
+                                        <div class="modal-body" style="width: 100%;">
+                                                <input type="text-field" name="description" id="description" placeholder="Leave a comment! " rows="10">
+                                        </div>
+                                        <div class="modal-footer" style="width: 100%;">
+                                            <button type="sumbit" class="btn btn-dark" id="create-post">
+                                                <a >Create a post</a>
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                                </div>
+                            </div>
+                            <% } %>
+                    </div>
                 </div>
 
             </div>
@@ -186,6 +187,8 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
         <script type="module" src="../public/js/getCoin.js"></script>
+        <script type="module" src="../public/js/sidebar.js"></script>
+    </div>
 
 </body>
 
