--- a/CryptoBlog/partials/sidebar.ejs
+++ b/CryptoBlog/partials/sidebar.ejs
@@ -45,48 +45,52 @@
 <main>
   <div class="d-flex flex-column flex-shrink-0 p-3 text-white fixed-top" id="sidebar" style="width: 280px;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+      <div class="logo-container">
         <h1>CryptoBlog</h1>
+        <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Gold_Bitcoin.svg/2048px-Gold_Bitcoin.svg.png' alt="">
+      </div>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
         <a href="/posts/BTC-bitcoin" class="nav-link text-white" aria-current="page">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
           Bitcoin
         </a>
       </li>
-      <li>
+      <li class="nav-item">
         <a href="/posts/ETH-ethereum" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
           Ethereum
         </a>
+        
       </li>
-      <li>
+      <li class="nav-item">
         <a href="/posts/XRP-xrp" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
           XRP
         </a>
       </li>
-      <li>
+      <li class="nav-item">
         <a href="/posts/ADA-cardano" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
           Cardano
         </a>
       </li>
-      <li>
+      <li class="nav-item">
         <a href="/posts/ATOM-cosmos" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
           Cosmos
         </a>
       </li>
-      <li>
+      <li  class="nav-item">
         <a href="/posts/DOGE-dogecoin" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
           Dogecoin
         </a>
       </li>
     </ul>
     <hr>
+
+    <div class="label-container">
+      <label>@Copyright 2022 by Pavel Romanov</label>
+      <label>All rights reserved</label>
+    </div>
+
   </div>
 
   <div class="b-example-divider"></div>
