--- a/CryptoBlog/public/styles/posts.css
+++ b/CryptoBlog/public/styles/posts.css
@@ -12,19 +12,23 @@ body{
 }
 
 .right-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 50%;
-    height: 50vh;
+    height: 100%;
 }
 
 .all-content{
     display: flex;
     flex-direction: row;
 }
-  
+
+.logo-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
 #sidebar{
     height: 100vh;
     background-color: #5469d4;
@@ -33,7 +37,19 @@ body{
   }
 
 #sidebar h1{
-    align-self: center;
+    font-size: 50px;
+    color: white;
+}
+
+.label-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-item a{
+    font-size: 30px;
 }
 
 .nav-buttons{
@@ -68,10 +84,13 @@ p {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 0;
+    padding-top: 50px;
     padding-bottom: 30px;
     color: black;
+    position: sticky;
+    top: 0;
 }
+
 
 .asset-price{
     color: #5469d4;
@@ -316,7 +335,7 @@ canvas{
 }
 
 #modal-button{
-    width: 80%;
+    width: 100%;
     margin-bottom: 5%;
     background-color: #5469d4;
 }
