--- a/CryptoBlog/views/home.ejs
+++ b/CryptoBlog/views/home.ejs
@@ -2,7 +2,10 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="jumbotron-container">
-            <h1 class="display-4" style="color: white">CryptoBlog</h1>
+            <div class="logo-container">
+                <h1 class="display-4" style="color: white">CryptoBlog</h1>
+                <img class="logo" src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Gold_Bitcoin.svg/2048px-Gold_Bitcoin.svg.png' alt="">
+            </div>
             <p>The leading crypto discussion site on the web.</p>
         </div>
     </div>
@@ -11,7 +14,7 @@
         <div class="crypto-label">
             <h3 style="margin: 0;">Check what's popular</h3>   
         </div>
-        <cards class="cards">
+        <cards class="main-cards-container">
  
             
         </cards>
