header on fav list

--- a/CryptoBlog/views/posts.ejs
+++ b/CryptoBlog/views/posts.ejs
@@ -177,6 +177,8 @@
                                 <% } %>
                             </div>
                             <div class="side-content">
+                                <h1>Favourite Coins</h1>
+
                                 <div class="group">
                                     <% for(var i = 0; i < favourites.length; i++){ 
                                         let name = favourites[i].coin.split('-')[0].toLowerCase();
