--- a/CryptoBlog/public/styles/posts.css
+++ b/CryptoBlog/public/styles/posts.css
@@ -85,6 +85,7 @@ p {
     align-items: flex-start;
 }
 
+
 .group{
     display: flex;
     flex-direction: row;
@@ -107,6 +108,10 @@ p {
 
 .side-content{
     margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .cards {
