--- a/CryptoBlog/views/home.ejs
+++ b/CryptoBlog/views/home.ejs
@@ -6,7 +6,7 @@
                 <h1 class="display-4" style="color: white">CryptoBlog</h1>
                 <img class="logo" src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Gold_Bitcoin.svg/2048px-Gold_Bitcoin.svg.png' alt="">
             </div>
-            <p>The leading crypto discussion site on the web.</p>
+            <p class="site-description">The leading crypto discussion site on the web.</p>
         </div>
     </div>
 
