--- a/CryptoBlog/public/styles/posts.css
+++ b/CryptoBlog/public/styles/posts.css
@@ -13,12 +13,12 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-left: 15%;
 }
 
 .right-container{
     width: 50%;
     height: 100%;
+    margin-right: 10%;
 }
 
 
@@ -363,7 +363,7 @@ button a{
 .nav-class{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -430,4 +430,38 @@ canvas{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+
+@media (max-width: 1200px) {
+    .main-container{
+        width: 100%;
+    }
+    .contents-container{
+        width: 100%;
+    }
+}
+
+@media (max-width: 1100px) {
+    .main-container{
+        width: 100%;
+    }
+    .contents-container{
+        width: 100%;
+    }
+    .container{
+        margin-top: 20%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .post-container{
+        width: 100%;
+    }
+    .right-container{
+        width: 100%;
+        align-self: flex-start;
+        display:table-header-group;
+    }
 }
